--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,101 @@
+8.9 【今日阅读】https://daedtech.com/5-things-ive-learned-in-20-years-of-programming/ 5 Things I’ve Learned in 20 Years of Programming
+
+8.8 【今日阅读】https://utcc.utoronto.ca/~cks/space/blog/sysadmin/LogMonitoringTarpit  In other words, problems that happen, that you care about, and probably that you can do something about. If a problem was probably a one time occurrence or occurs infrequently, the payoff from automated log monitoring for it can be potentially quite low (you can see this as an aspect of how alerts and monitoring can never be comprehensive).
+
+8.7 【今日阅读】https://benhoyt.com/writings/name-before-type/ Name before type: why ‘age int’ is better than ‘int age’
+
+8.6 【今日阅读】https://gitlab.com/dahjelle/notes-from-the-programmers-brain/-/blob/main/README.md The main idea is to understand how your brain works, so you can understand its strengths and weaknesses, using its strengths and compensating for its weaknesses.
+
+8.5 【今日阅读】https://loup-vaillant.fr/articles/physics-of-readability to efficiently grow and maintain programs, code that is read together should be written together. Put another way, code that is written apart should not have to be read together. I like to call this rule “code locality”. It’s a simple rule, but we can derive quite a few guidelines from it.
+
+8.4 【今日阅读】https://about.codecov.io/blog/codecov-is-now-open-source/ Codecov makes it easy to see absolute coverage and coverage changes overlayed with your source code, making it even easier to identify needed test areas.
+
+8.3 【今日阅读】https://thunderseethe.dev/posts/whats-in-a-module/  Modules depending on other modules is core functionality of any module system. It informs a lot of decisions in the rest of the system implementation. 
+* Weak - A module must have all dependencies available before it can start compilation
+* Strong - A module can be compiled without its dependencies, and its dependencies can be provided later
+Based on the definition alone, Strong Modules sound better. Why would we want to wait on our dependencies if we don’t have to? The answer is complexity. Weak Modules are, historically, much simpler than Strong Modules both to use and implement. 
+Packaging is clearly vital, but languages don’t use the module system to do it. They all invent ad hoc methods to handle packaging. So the system has Weak Modules for namespacing and makes something else up for packages, calls it a compilation unit, JAR, or something else programmers hate.
+
+8.2 【今日阅读】https://lobste.rs/s/frgf9r/throw_away_your_first_draft_your_code Where a new system concept or new technology is used, one has to build a system to throw away, for even the best planning is not so omniscient as to get it right the first time. Hence plan to throw one away; you will, anyhow.
+
+8.1 【今日阅读】https://danluu.com/testing/ 这篇文章讨论了软件测试中的一些观点,主要比较了软件测试和硬件测试的差异。文章的主要观点包括:
+
+1. 软件测试中大部分测试工作来自手写测试,而在硬件测试中手写测试只占很小的比例。
+
+2. 随机测试在很多情况下可以高效地找到bug,但软件项目很少采用。文章建议可以考虑使用一些现有的随机测试框架。
+
+3. 基于覆盖率的测试如AFL也很有效,但类似思想很少应用在单元测试中。作者自己做了一个基于覆盖率的单元测试的原型。
+
+4. 硬件测试会在成千上万的机器上运行测试,而软件测试倾向于限制单个测试的运行时间。考虑到机器成本低廉,软件项目也应该考虑持续运行自动化测试。
+
+5. 硬件项目的测试文化更注重发现所有重要bug,而软件项目的文化更倾向于接受有bug逃逸。这也影响着测试方法的选择。
+
+6. 软件测试者应该改变仅仅依赖手工测试案例的思维定势,多考虑采用自动化随机测试等方法。
+
+7.31 【今日阅读】https://tomasp.net/blog/2023/vague-spaces/ "Vague space" 是一个城市规划和建筑理论中的概念,指的是在城市中那些没有明确用途的被遗弃的空间。这篇文章探讨了程序和编程系统中是否也存在类似的 "vague space"。
+
+文章总结了城市中的 vague space 的几个特征:
+
+- 它们往往源自历史,是过去用于某些目的但现在不再需要的空间。
+
+- 它们存在于城市不同区域或功能的交界处,比如工业区和住宅区之间。
+
+- 它们是精心设计的有秩序空间的副产品,存在于这些有秩序空间的边界。
+
+- 它们具有多重意义,既包含旧的使用痕迹,也适应新的非正式用途。
+
+文章认为软件系统中也存在类似的特征:
+
+- 遗留代码往往具有看不懂的旧逻辑,需要各种封装来与新系统集成。
+
+- 微服务架构中的各服务之间就需要大量粘合代码进行集成。
+
+- 越模块化的系统需要的各模块之间进行协调的糊涂代码就越多。
+
+- 代码可从多个角度理解,程序员和用户的视角就不同。
+
+所以 urban vague space 为思考软件设计提供了一些有启发性的类比。但是城市空间和程序空间有根本区别,城市空间是固定的,这一点值得注意。总体来说,从其他领域借用思考方式还是可以给我们提供一些新的视角的。
+
+7.30 【今日阅读】https://www.hillelwayne.com/post/problems-with-the-4doc-model/ If we zoom out to programming languages (PLs), the 4doc model breaks down entirely. If you look at the Python docs, the tutorial section needs to also explain and reference, and the references are both explanation and how-to. Language concept maps are just too dense to separate.
+
+7.29 【今日阅读】https://research.nccgroup.com/2023/07/20/tool-release-cartographer/ Cartographer simplifies the complexities of reverse engineering by allowing researchers to visually observe which parts of a program were executed, obtain details about each function’s execution, compare different runs of the same program, and much more.
+
+7.28 【今日阅读】https://martypc.blogspot.com/2023/06/hardware-validating-emulator.html?m=1 In the emulation world, there are a few different ways to determine if your emulator is accurate.
+
+7.27 【今日阅读】https://zhuanlan.zhihu.com/p/646163380 只会调用 transformers 库，对于学会写 runner 帮助是不大的。要写 runner，我们要打开黑盒子，把 transformers 库的依赖去掉，只依赖 pytorch 实现一遍 Llama 模型。然后就发现
+
+* transformers 库包含了训练代码，包含了批量代码，包含了kv缓存等等功能。这些功能会极大影响初学者的阅读理解
+* 一个变量名反复更新，比如 hidden_value，你都搞不清当前里面放的是啥了
+* tensor 从名字看不出来这个 tensor 的 shape 和内容是什么
+
+经过几天的努力改写成了一份极简代码，这是一张自动打日志记录下来的真实运行时 tensor 之间数据流。我们要跑的就是这么一个数据流。我们移植到其他硬件上，也是对比这个数据流是不是一致。
+
+7.26 【今日阅读】https://rust-analyzer.github.io/blog/2023/07/24/durable-incrementality.html 这篇文章描述了 Salsa (一个由 rust-analyzer 使用的增量计算引擎)中实现的一种优化技术——durability 系统。主要内容如下:
+
+- Salsa 通过记录函数调用之间的依赖关系来构建一个调用图。当输入变化时,Salsa 可以根据调用图判断哪些查询需要重新运行。
+
+- Salsa 实现了两个额外的优化:early cutoff 和 laziness。early cutoff 可以重用一些依赖被修改输入的查询的结果,如果查询结果并没有实际改变。laziness 是指直到一个查询结果被要求时,才去追踪修改导致的失效信息。
+
+- 但是当输入变化很小时,还是需要遍历整个调用图去更新版本号,这很耗费时间。
+
+- durability 系统将查询区分为更持久和更易变的,Salsa 可以相应优化。标准库相关的查询标记为持久,用户代码相关的标记为易变。
+
+- 实现上,使用版本向量而不是单个版本号。输入也标记不同的持久性级别。更新时根据输入持久性级别决定更新哪些版本号。查询时检查版本向量对应级别的版本号。
+
+- 这样就可以避免输入变化只影响用户代码时,也检查标准库相关查询的问题。优化了性能。
+
+7.25 【今日阅读】https://lobste.rs/s/hqchwu/seriously_you_should_be_having_fun The author leads with “People working in other industries should probably not be miserable at work either, but that is not the concern of this article”. About that:
+
+I spent my 20s working almost-min-wage jobs in kitchens and grocery stores, working as many as 3 jobs (opening + prep work in a cafe in the early morning, cook in a restaurant in the afternoon and evening, and bus dishes on the weekend) and various side hustles to pay for a small room in a crowded house in South Berkeley (~approx 11 other people were living there), with not much hope in sight for anything different.
+
+Sometimes nowadays I find myself getting frustrated with e.g. some of the nasty proprietary or legacy tech I have to work or interface with. But while this work can sometimes feel like slogging through filth, I’ve worked jobs where I literally had to slog my way through actual filth – and this is very far from that. As a knowledge worker, you generally have autonomy and respect and flexibility that is completely unheard of to even a lot of white collar workers, let alone folks toiling away doing physically demanding work for minimum wage. Not to mention you probably won’t deal with the kinds of psychological abuse and unsafe conditions that are part and parcel with many of those lower-wage jobs
+
+Which isn’t to say that tech workers shouldn’t aim to improve their conditions further or try to have more fun at work or that we should put up with bullshit simply because others have it worse – It’s essential that we protect what we have and improve it and even enjoy ourselves. But I do think that tech workers often miss how dire things are for other folks, especially folks working low-wage, manual jobs, and it would be nice to see more recognition of the disparity in our circumstances
+
+7.24 【今日阅读】https://encore.dev/blog/building-for-failure Uncovering hidden dangers when designing Event-Driven Systems
+
+7.23 【今日阅读】https://ferd.ca/embrace-complexity-tighten-your-feedback-loops.html  "Embrace Complexity; Tighten Your Feedback Loops
+
 7.22 【今日阅读】https://lobste.rs/s/vpqlh9/rethinking_infrastructure_as_code_from “Infrastructure as Code” even the best implementations I’ve seen kind of suffer from the same issues:
 
 Feedback loops are long, and “runtime” exceptions are common.
