--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,49 @@
+8.31 -【今日阅读】https://newsletter.pragmaticengineer.com/p/developer-productivity-a-new-framework We can gather fast, accurate data with surveys: people can tell us about their work experience and systems much faster than we can typically instrument, test, and validate system data.
+
+8.30 【今日阅读】https://newsletter.pragmaticengineer.com/p/measuring-developer-productivity The consultancy giant has devised a methodology they claim can measure software developer productivity. But that measurement comes at a high price – and we offer a more sensible approach. Part 1.
+
+8.29 【今日阅读】https://milen.me/writings/premature-optimization-universally-misunderstood/ If you want to have fast software, you must think about performance from day one. This includes thinking about the tech stack, the architecture, the data access patterns, the data dependencies, the networking and how it all fits together.
+
+8.28 【今日阅读】https://hygger.io/blog/software-estimates-explored-explained-and-debunked/ 5 Laws of Software Estimates – Explored, Explained and Debunked
+
+8.27 【今日阅读】https://old.reddit.com/r/webdev/comments/1613yqj/as_i_get_older_i_just_dont_care_about_new/ As I get older, I just don't care about new technology
+
+8.26 【今日阅读】https://htmx.org/essays/no-build-step/ Why htmx Does Not Have a Build Step
+
+8.25 【今日阅读】https://www.mattduck.com/2021-04-a-philosophy-of-software-design.html Philosophy of Software Design
+
+8.24 【今日阅读】https://jmmv.dev/2023/08/costs-exposed-monorepo-multirepo.html What’s not so obvious—and what the objectors are missing—is that these maintenance costs exist in multirepo environments too. The difference is that, in multirepo setups, these costs fly under the radar because they are smeared across every repo. When taken individually, the costs seem insignificant, but in unison, they make a taxing impact on every team member.
+
+8.23 【今日阅读】https://lukeplant.me.uk/blog/posts/no-one-actually-wants-simplicity/ The reason that modern web development is swamped with complexity is that no one really wants things to be simple. We just think we do, while our choices prove otherwise.
+
+8.22 【今日阅读】https://medium.com/source-and-buggy/do-one-thing-and-do-it-well-886b11a5d21 Let’s assume Kernighan and Pike were right about at least one thing: that this software bloat is a problem. Massive apps are hard to learn, hard to use, and buggy as hell. Some of this is a UX problem, but most of it is actually a symptom of the developer experience.
+
+8.21 【今日阅读】https://cohost.org/tef/post/2503472-complex-simple-good ask programmer for very general advice, they might say "learn to avoid complexity" or "embrace simplicity". the only problem? it's really bad advice. not to be all "conservation of energy" here but when someone tells you they've eliminated complexity, it usually means the complexity is now someone else's problem.
+
+8.20 【今日阅读】https://www.dancowell.com/breaking-the-rules/ When I took over the team, they were in month 8 of a 3-month project to relaunch the company's ecommerce website. After 2 months leading the team, I decided to scrap it and start over. This is the story of how and why, and whether it all worked out.
+
+8.19 【今日阅读】https://luispcosta.com/managing-small-team Get to know everyone, and take note of what should change and why (if anything)
+
+8.18 【今日阅读】https://arxiv.org/pdf/2307.12469.pdf 我们的研究表明:1)基于大语言模型的生成已显示出实用性。64%的问题可以完全自动解决,如果手动语义验证器合并在内,这个数字会提高到91%。此外,生成的驱动程序与行业中常用的驱动程序具有竞争力的性能;2)大语言模型在生成需要复杂API使用细节的模糊驱动程序时存在困难。三个关键设计可以提供帮助:重复查询、带示例查询和迭代查询。组合使用它们是一个优异的策略;3)仍有很大的改进空间,如自动语义正确性验证、API使用扩展和语义表生成。
+
+8.17 【今日阅读】https://prefix.dev/blog/launching_pixi A pixi.toml project file is similar in spirit to a Cargo.toml or pyproject.toml file. Platform specific dependencies are read from the checked-in lock-file (Python, compilers, whatever the project needs). Dependencies are downloaded and installed into a project specific virtual environment. The environment is activated and the cross-platform command is run (this uses Deno task shell)
+
+8.16 【今日阅读】https://queue.acm.org/detail.cfm?id=3595878 This paper provides a practical framework for understanding DevEx, and presents a measurement framework that combines feedback from developers with data about the engineering systems they interact with. These two frameworks provide leaders with clear, actionable insights into what to measure and where to focus in order to improve developer productivity.
+
+8.15 【今日阅读】https://arxiv.org/pdf/2308.04748.pdf 使用 StarCoder 不断生成新的 program 来达到 fuzz test 的目的。为了避免手写 prompt，使用 gpt-4 来阅读被测应用的文档，自动生成 StarCoder 的 prompt。
+
+8.14 【今日阅读】https://lobste.rs/s/p3ftiy/tailwind_death_web_craftsmanship As a mostly backend engineer that has reached to boostrap, bulma and similar tools in the past, I don’t think the rationale is necessarily considering front end as a lesser discipline but rather as another complicated discipline in its own right, one that it would take a equal or more amount of time to master. They know they cannot produce professional grade interfaces, but they still need or want to put something together (for the purposes of a personal project, a non-customer facing tool at work, etc.). Those tools allow them to do that passably with a similar amount of effort as learning a new library, which is convenient.
+
+8.13 【今日阅读】https://news.ycombinator.com/item?id=37091983 When complexity leaps are on the table, there’s usually also an opportunity to squeeze some extra juice out of the system you have. By tweaking the workload, tuning performance, or supplementing the system in some way, you may be able to add months or even years of runway. When viable, these options are always preferable to building out a next-gen system.
+
+8.12 【今日阅读】https://corrode.dev/blog/illegal-state/ If you've worked with Rust for a while, you've probably heard the phrase "making illegal states unrepresentable". It's a phrase that's often used when people praise Rust's type system. But what exactly does it mean? And how can you apply it to your own code?
+
+8.11 【今日阅读】https://twitter.com/0zne/status/1689644496227864576 Do we still need Product Managers?
+stripe’s zero-PM strategy lean toward a « no » ❌
+Enters Engineering-Driven Development ↓
+
+8.10 【今日阅读】https://two-wrongs.com/retro-prompts.html Sometimes explicit questions elicit answers that people don’t think of on their own. This article lists a set of questions I’ve found to be useful when holding development retrospectives, divided into three categories.
+
 8.9 【今日阅读】https://daedtech.com/5-things-ive-learned-in-20-years-of-programming/ 5 Things I’ve Learned in 20 Years of Programming
 
 8.8 【今日阅读】https://utcc.utoronto.ca/~cks/space/blog/sysadmin/LogMonitoringTarpit  In other words, problems that happen, that you care about, and probably that you can do something about. If a problem was probably a one time occurrence or occurs infrequently, the payoff from automated log monitoring for it can be potentially quite low (you can see this as an aspect of how alerts and monitoring can never be comprehensive).
