--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.1 【今日阅读】https://lobste.rs/s/ksf9t0/amd_open_source_gpu_kernel_driver_above_5 Device Simplicity Metric, the shorter the driver, but the longer the range of configuration parameters and the more difficult its initialization, the more complicated the device is internally, relative to the driver’s complexity.
+
 8.31 -【今日阅读】https://newsletter.pragmaticengineer.com/p/developer-productivity-a-new-framework We can gather fast, accurate data with surveys: people can tell us about their work experience and systems much faster than we can typically instrument, test, and validate system data.
 
 8.30 【今日阅读】https://newsletter.pragmaticengineer.com/p/measuring-developer-productivity The consultancy giant has devised a methodology they claim can measure software developer productivity. But that measurement comes at a high price – and we offer a more sensible approach. Part 1.
