--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,11 @@
+9.5 【今日阅读】https://ast-grep.github.io/guide/pattern-syntax.html ast-grep(sg) is a fast and polyglot tool for code structural search, lint, rewriting at large scale.
+
+9.4 【今日阅读】https://www.appsmith.com/blog/monoliths-vs-microservices-3 how the modular monolithic architecture improved how we interact with our open-source community so that other open-source projects can borrow from our experiences.
+
+9.3 【今日阅读】https://lobste.rs/s/rbuvrc/worst_programmer Just don’t try to measure the individual contribution of a unit in a complex adaptive system, because the premise of the question is flawed.
+
+9.2 【今日阅读】https://www.figma.com/blog/keeping-figma-fast/#embracing-performance-work-in-a-remote-first-world First, we wanted a system that could test every proposed code change in our main monorepo so we could spot performance regressions across all product features early in the development cycle. Next, the system had to run fast. We decided that any performance guardrail check would need to finish in under 10 minutes. Lastly, we needed a way to discuss and compare performance. We wanted the ability to reveal the most subtle changes in performance on real hardware, collect CPU profiles, and share links to all this data to drive decisions and continue improving the model moving forward.
+
 9.1 【今日阅读】https://lobste.rs/s/ksf9t0/amd_open_source_gpu_kernel_driver_above_5 Device Simplicity Metric, the shorter the driver, but the longer the range of configuration parameters and the more difficult its initialization, the more complicated the device is internally, relative to the driver’s complexity.
 
 8.31 -【今日阅读】https://newsletter.pragmaticengineer.com/p/developer-productivity-a-new-framework We can gather fast, accurate data with surveys: people can tell us about their work experience and systems much faster than we can typically instrument, test, and validate system data.
